# fpga-blinky

./: Cargo.toml
firmware/blinky/: nextpnr.err  top.asc  top.json  top.pcf  top.v  yosys_synth.out
src/: main.rs  sim.rs  verilog.rs
